made changes to index.html

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Aaliya Ahamed</title>
   <link rel="stylesheet" href="style.css" />
+  <a href="C:\Users\Anam\Desktop\aaliyaweb\readmore.html" class="read-more">Read More →</a>
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
-
+  
 </head>
 <body>
     <header>
@@ -76,7 +77,7 @@
         <div class="project-card">
           <img src="du.jpeg" alt="DU Project" />
           <p class="project-desc">Summer Intern at University of Delhi</p>
-          <a href="project3.html" class="read-more">Read More →</a>
+          <a href="readmore.html" class="read-more">Read More →</a>
         </div>
       </div>
       
@@ -154,7 +155,7 @@
     <div class="contact-details">
       <p><strong>Email:</strong> <a href="mailto:Aba6631@psu.edu">Aba6631@psu.edu</a></p>
       <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/yourprofile" target="_blank">View Profile</a></p>
-      <p><strong>Resume:</strong> <a href="resume.pdf" target="_blank">Download PDF</a></p>
+      <p><strong>Resume:</strong> <a href="resume.pdf" target="_blank">View PDF</a></p>
     </div>
   </section>
   
